infra/azure/k8s/cilium/argo_workflows.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "argo-workflows"
  namespace: "argo-workflows"
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "minio.argo-artifacts.svc.cluster.local"
    - toServices:
        - k8sService:
            serviceName: minio
            namespace: argo-artifacts
