infra/azure/k8s/cilium/dawn.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: kube-dns-dawn
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s-app: kube-dns
  egress:
    # Allow kube-dns to communicate with the local DAWN DNS servers
    - toCIDR:
        - 192.168.3.2/32
        - 192.168.3.3/32
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-etcd-jobs
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      etcd-defrag: "true"
  egress:
    - toEntities:
      - kube-apiserver
      # Since this is on Dawn, we can be specific about the port
      toPorts:
        - ports:
          - port: "6443"
            protocol: ANY
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: webhook-ingress-nginx
  namespace: ingress-nginx
  # Allow traffic from the remote-node entity on port 8443. This is webhook related traffic
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: ingress-nginx
      k8s:app.kubernetes.io/component: controller
  ingress:
    - fromEntities:
        - remote-node
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
