infra/azure/k8s/cilium/ingress-nginx.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: enable-external-ingress
  namespace: ingress-nginx
spec:
  endpointSelector: {}
  ingress:
    # Allow https ingress traffic
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Allow ingress to the Harbor Nginx component, which redirects to the Harbor registry or web UI
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: harbor
            app: harbor
            component: nginx
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    # Allow ingress to the Argo Server web UI
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: argo-server
            app: server
      toPorts:
        - ports:
            - port: "2746"
              protocol: TCP
    # Allow ingress to the MinIO tenant web UI
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: argo-artifacts
            v1.min.io/tenant: argo-artifacts
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
