infra/azure/k8s/cilium/kube-system.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: kube-system
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
