infra/azure/k8s/cilium/minio-operator.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: minio-operator
  namespace: minio-operator
spec:
  # Apply to all pods in this namespace
  endpointSelector: {}
  ingress: []
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: argo-artifacts
            v1.min.io/tenant: argo-artifacts
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
    # Outbound to k8s DNS to look up IPs
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
    - toEntities:
        - kube-apiserver
